// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serialize with a 1:1 relationship when no relationship identifier is found ignores the relationship 1`] = `
Object {
  "data": Object {
    "id": "123",
    "type": "users",
  },
}
`;

exports[`serialize with a 1:1 relationship with a local id serializes the data 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "511",
    "relationships": Object {
      "company": Object {
        "data": Object {
          "lid": "666",
          "type": "companies",
        },
      },
    },
    "type": "users",
  },
}
`;

exports[`serialize with a 1:1 relationship with a normal id serializes the data 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "511",
    "relationships": Object {
      "company": Object {
        "data": Object {
          "id": "666",
          "type": "companies",
        },
      },
    },
    "type": "users",
  },
}
`;

exports[`serialize with a 1:1 relationship with includes with a local id serializes the data 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "1234",
    "relationships": Object {
      "company": Object {
        "data": Object {
          "lid": "612",
          "type": "companies",
        },
      },
    },
    "type": "users",
  },
  "included": Array [
    Object {
      "attributes": Object {
        "name": "Compeong GmbH",
      },
      "lid": "612",
      "type": "companies",
    },
  ],
}
`;

exports[`serialize with a 1:1 relationship with includes with a normal id serializes the data 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "1234",
    "relationships": Object {
      "company": Object {
        "data": Object {
          "id": "612",
          "type": "companies",
        },
      },
    },
    "type": "users",
  },
  "included": Array [
    Object {
      "attributes": Object {
        "name": "Compeong GmbH",
      },
      "id": "612",
      "type": "companies",
    },
  ],
}
`;

exports[`serialize with a 1:n relationship when no relationship identifier is found™ ignores the faulty relationship and serializes the valid one 1`] = `
Object {
  "data": Object {
    "id": "123",
    "relationships": Object {
      "companies": Object {
        "data": Array [
          Object {
            "id": "666",
            "type": "companies",
          },
        ],
      },
    },
    "type": "users",
  },
  "included": Array [
    Object {
      "attributes": Object {
        "name": "Compeon GmbH",
      },
      "id": "666",
      "type": "companies",
    },
  ],
}
`;

exports[`serialize with a 1:n relationship with a local id serializes the data 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "511",
    "relationships": Object {
      "companies": Object {
        "data": Array [
          Object {
            "lid": "666",
            "type": "companies",
          },
          Object {
            "id": "667",
            "type": "companies",
          },
        ],
      },
    },
    "type": "users",
  },
}
`;

exports[`serialize with a 1:n relationship with a normal id serializes the data 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "511",
    "relationships": Object {
      "companies": Object {
        "data": Array [
          Object {
            "id": "666",
            "type": "companies",
          },
          Object {
            "id": "667",
            "type": "companies",
          },
        ],
      },
    },
    "type": "users",
  },
}
`;

exports[`serialize with a 1:n relationship with includes with a local id serializes the data 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "511",
    "relationships": Object {
      "companies": Object {
        "data": Array [
          Object {
            "lid": "666",
            "type": "companies",
          },
          Object {
            "id": "667",
            "type": "companies",
          },
        ],
      },
    },
    "type": "users",
  },
  "included": Array [
    Object {
      "attributes": Object {
        "name": "Compeon GmbH",
      },
      "lid": "666",
      "type": "companies",
    },
    Object {
      "attributes": Object {
        "name": "Compeong 4.0 GmbH",
      },
      "id": "667",
      "type": "companies",
    },
  ],
}
`;

exports[`serialize with a 1:n relationship with includes with a normal id serializes the data 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "511",
    "relationships": Object {
      "companies": Object {
        "data": Array [
          Object {
            "id": "666",
            "type": "companies",
          },
          Object {
            "id": "667",
            "type": "companies",
          },
        ],
      },
    },
    "type": "users",
  },
  "included": Array [
    Object {
      "attributes": Object {
        "name": "Compeon GmbH",
      },
      "id": "666",
      "type": "companies",
    },
    Object {
      "attributes": Object {
        "name": "Compeong 4.0 GmbH",
      },
      "id": "667",
      "type": "companies",
    },
  ],
}
`;

exports[`serialize with simple attributes with an array of resources serializes the data 1`] = `
Object {
  "data": Object {
    "type": "user",
  },
}
`;

exports[`serialize with simple attributes with empty attributes serializes no attributes key 1`] = `
Object {
  "data": Object {
    "id": "125",
    "type": "users",
  },
}
`;

exports[`serialize with simple attributes with valid data serializes the data 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "123",
    "type": "users",
  },
}
`;
